libs/core/proc_macros/api_resource/tests/ui/unit_struct.stderr
error: Unexpected type `bool`
 --> tests/ui/unit_struct.rs:4:22
  |
4 | #[api_resource(url = true)]  // Should fail - url must be a string
  |                      ^^^^
