libs/core/proc_macros/api_resource/tests/ui/unit_struct.rs
use core_proc_macros::ApiResource;

#[derive(ApiResource)]
#[api_resource(url = true)]  // Should fail - url must be a string
pub struct User {
    id: String,
}

fn main() {}
